--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <form onsubmit="app.listController.addList(event)">
+      <form onsubmit="app.listController.addList(event, id)">
         <div class="form-group">
             <label for="">List Name</label>
             <input type="text" name="listName" class="form-control" placeholder=""
@@ -40,3 +40,4 @@
     <script src="app/main.js" type="module"></script>
   </body>
 </html>
+
